# library-tracker-in-django

./: .gitignore  Dockerfile  LICENSE  README.md  manage.py  pyproject.toml  requirement.txt  requirements.txt
LibraryTracker/: asgi.py  settings.py  urls.py  wsgi.py
portal/: admin.py  apps.py  views.py
