[tool.poetry]
name = "library"
version = "0.1.0"
description = "library tracker in django"
authors = ["kyo <odinxp@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.8"
pylint = "^2.11.1"
pylint-django = "^2.4.4"
pygsheets = "^2.0.5"
django-mongoengine = "0.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']
